--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,11 +47,11 @@ h4 {
     position: fixed;
     bottom: 1rem;
     right: 1rem;
-    background-color: red;
+    // background-color: red;
 }
 .rtl .float {
     position: fixed;
     bottom: 1rem;
     left: 1rem;
-    background-color: red;
+    // background-color: red;
 }
