close menu by default

--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -142,7 +142,7 @@
 </header>
 <!-- Header End -->
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav">
+<nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu" >
         <div class="left_section">
             <ul>
