--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -185,7 +185,7 @@
 <!-- Header End -->
 <!-- Left Sidebar Start -->
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav">
+<nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
             <ul>
