--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,5 +1,5 @@
 <app-admin-sidebar></app-admin-sidebar>
-<div class="wrapper">
+<div class="wrapper wrapper__minify">
     <router-outlet></router-outlet>
     <app-admin-footer></app-admin-footer>
 </div>
