--- a/src/app/pages/instructor/instructor.component.html
+++ b/src/app/pages/instructor/instructor.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
-<div class="wrapper">
+<div class="wrapper wrapper__minify">
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
