--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -148,7 +148,7 @@
 </header>
 <!-- Header End -->
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav">
+<nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
             <ul>
