--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -7,12 +7,12 @@
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </label> -->
-<button (click)="collapse()" id="collapse_menu" class="collapse_menu chapterListToggle">
+<button (click)="collapse()" id="collapse_menu" class="collapse_menu chapterListToggle minify">
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </button>
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav chapter-list">
+<nav class="vertical_nav chapter-list vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <h4 class=header>{{"Table of content" | translate}}<a class="right"><i [routerLink]="['/user/dashboard']"
                     routerLinkActive="router-link-active" class="uil uil-home-alt"></i></a></h4>
@@ -44,7 +44,7 @@
 </nav>
 <!-- Left Sidebar End -->
 <!-- Body Start -->
-<div class="wrapper pt-0 course-content">
+<div class="wrapper pt-0 course-content wrapper__minify">
     <div class="row">
         <div class="col-lg-12">
             <div class="video-player-container">
