--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,6 +1,6 @@
 <!-- <app-user-header></app-user-header> -->
 <app-user-sidebar></app-user-sidebar>
-<div class="wrapper">
+<div class="wrapper wrapper__minify">
     <router-outlet></router-outlet>
     <app-user-footer></app-user-footer>
 </div>
