add version to landing

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -106,7 +106,7 @@
           </li> -->
         </ul>
         <p class="copyrights-text mb-0"><strong>{{"Smart Academy" | translate}}</strong>. {{"All
-          Rights Reserved" | translate}}. </p>
+          Rights Reserved" | translate}}. v{{version}}</p>
       </div>
     </div>
   </footer>
