--- a/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -34,8 +34,8 @@
                                 <h6>Zoena Singh</h6>
                                 <p>Hi! Sir, How are you. I ask you one thing please explain it this video price.</p>
                                 <span class="nm_time">2 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a  class="channel_my item">
                         <div class="profile_link">
@@ -44,8 +44,8 @@
                                 <h6>Joy Dua</h6>
                                 <p>Hello, I paid you video tutorial but did not play error 404.</p>
                                 <span class="nm_time">10 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a  class="channel_my item">
                         <div class="profile_link">
@@ -54,8 +54,8 @@
                                 <h6>Jass</h6>
                                 <p>Thanks Sir, Such a nice video.</p>
                                 <span class="nm_time">25 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a class="vbm_btn" href="instructor_messages.html">View All <i class='uil uil-arrow-right'></i></a>
                 </div>
@@ -70,8 +70,8 @@
                                 <h6>Rock William</h6>
                                 <p>Like Your Comment On Video <strong>How to create sidebar menu</strong>.</p>
                                 <span class="nm_time">2 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a  class="channel_my item">
                         <div class="profile_link">
@@ -80,8 +80,8 @@
                                 <h6>Jassica Smith</h6>
                                 <p>Added New Review In Video <strong>Full Stack PHP Developer</strong>.</p>
                                 <span class="nm_time">12 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a  class="channel_my item">
                         <div class="profile_link">
@@ -89,8 +89,8 @@
                             <div class="pd_content">
                                 <p> Your Membership Approved <strong>Upload Video</strong>.</p>
                                 <span class="nm_time">20 min ago</span>
-                            </div>							
-                        </div>							
+                            </div>
+                        </div>
                     </a>
                     <a class="vbm_btn" href="instructor_notifications.html">View All <i class='uil uil-arrow-right'></i></a>
                 </div>
@@ -134,7 +134,7 @@
                     <a  class="item channel_item">Help</a>
                     <a  class="item channel_item">Send Feedback</a> -->
                     <a (click)="signOut()" class="item channel_item">{{"Sign Out" | translate}}</a>
-               
+
                 </div>
             </li>
         </ul>
@@ -142,7 +142,7 @@
 </header>
 <!-- Header End -->
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav">
+<nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu" >
         <div class="left_section">
             <ul>
