--- a/src/app/pages/instructor/components/sidebar/sidebar.component.html
+++ b/src/app/pages/instructor/components/sidebar/sidebar.component.html
@@ -14,21 +14,21 @@
     <a [routerLink]="['create/course']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
         <i class='uil uil-plus-circle menu--icon'></i>
         <span class="menu--label">Create Courses</span>
-        
+
     </a>
 </li>
 <li class="menu--item">
     <a [routerLink]="['create/chapter']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
         <i class='uil uil-plus-circle menu--icon'></i>
         <span class="menu--label">Add Chapter</span>
-        
+
     </a>
 </li>
 <li class="menu--item">
     <a [routerLink]="['create/lecture']" routerLinkActive="active" replaceUrl="true" class="menu--link" title="Create Course">
         <i class='uil uil-plus-circle menu--icon'></i>
         <span class="menu--label">Add lectures</span>
-        
+
     </a>
 </li> -->
 
@@ -135,7 +135,7 @@
                             class='uil uil-arrow-right'></i></a>
                 </div>
             </li> -->
-            
+
             <li>
                 <a [routerLink]="['create/course']" routerLinkActive="router-link-active"  class="upload_btn">{{"Create New Course" | translate}}</a>
             </li>
@@ -185,7 +185,7 @@
 <!-- Header End -->
 <!-- Left Sidebar Start -->
 <!-- Left Sidebar Start -->
-<nav class="vertical_nav">
+<nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
             <ul>
