--- a/src/app/pages/instructor/create-course/create-course.component.html
+++ b/src/app/pages/instructor/create-course/create-course.component.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="buttn">
                         <button mat-button (click)="onInfoFormNext(stepper)"
                             class="btn btn-default steps_btn">{{'Next' | translate}}</button>
                     </div>
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="step-footer step-tab-pager">
+                        <div class=" buttn step-footer step-tab-pager">
                             <button mat-button matStepperPrevious
                                 class="btn btn-default steps_btn">{{'Back' | translate}}</button>
                             <!-- <button mat-button (click)="stepper.reset()"
