--- a/src/app/pages/instructor/edit-course/edit-course.component.html
+++ b/src/app/pages/instructor/edit-course/edit-course.component.html
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="buttn">
                         <button mat-button (click)="onInfoFormNext(stepper)"
                             class="btn btn-default steps_btn">{{"Next" | translate}}</button>
                     </div>
