--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -107,12 +107,15 @@
 									<label> {{"instructor" | translate}} </label>
 								</div>
 							</div>
-						</div>
-						<div class="recaptcha mt-15">
+            </div>
+            <div>
+              						<div class="recaptcha mt-15">
 							<ngx-recaptcha2 #reCaptchaElm [hl]="userLang" [siteKey]="reCaptchaKey" (load)="onReCapLoad()"
-								
+
 								formControlName="reCaptcha"></ngx-recaptcha2>
-						</div>
+            </div>
+          </div>
+
 						<button class="login-btn" (click)="onSignUpClick($event)">{{"sign Up" | translate}}</button>
 						<ngx-loading [show]="loading"></ngx-loading>
 					</form>
