--- a/src/assets/css/instructor-dashboard.css
+++ b/src/assets/css/instructor-dashboard.css
@@ -11,14 +11,14 @@ Table Of Content
 =============================================================*/
 
 
-/* ================================================================================== 
+/* ==================================================================================
 Fonts
 ===================================================================================== */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap');
 @font-face {
     font-family: 'helvetica';
     src:  url('../fonts/helvetica-neue-lt-arabic.ttf');
-    src:  
+    src:
       url('../fonts/helvetica-neue-lt-arabic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -26,7 +26,7 @@ Fonts
 
 
 
-/* ================================================================================== 
+/* ==================================================================================
 Rtl style
 ===================================================================================== */
 body.rtl {
@@ -1552,7 +1552,7 @@ body.rtl {
 	vertical-align: middle;
 	font-family: 'helvetica', sans-serif;
 	font-weight: 400;
-	
+
 }
 
 .rtl .gray-s {
@@ -3837,7 +3837,7 @@ body.rtl {
     right: auto;
 	position: absolute;
 }
-/* ================================================================================== 
+/* ==================================================================================
 Reset Css
 ===================================================================================== */
 
@@ -3850,8 +3850,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -3862,7 +3862,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -4003,7 +4003,7 @@ h1 {
 	font-size: 3em;
 	/* 3x body copy size = 48px */
 	line-height: 1.05;
-	/* keep to a multiple of the 20px line height 
+	/* keep to a multiple of the 20px line height
 	and something more appropriate for display headings */
 }
 h2 {
@@ -4154,7 +4154,7 @@ input[type=text] {
     margin-left: 60px;
   }
   .rtl .wrapper {
-    margin-right: 240px;
+    /* margin-right: 240px; */
     margin-left: 0;
   }
 
@@ -4642,7 +4642,7 @@ i.icon1 {
 	-moz-transform: scale(1.1);
 	-ms-transform: scale(1.1);
 	-o-transform: scale(1.1);
-	transform: scale(1.1); 	
+	transform: scale(1.1);
 }
 
 .lng_btn .ui.dropdown .menu>.item {
@@ -4856,10 +4856,10 @@ i.icon1 {
 }
 
 @keyframes sk-bouncedelay {
-  0%, 80%, 100% { 
+  0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
-  } 40% { 
+  } 40% {
     -webkit-transform: scale(1.0);
     transform: scale(1.0);
   }
@@ -5225,7 +5225,7 @@ i.icon1 {
     left: 0;
     right: 0;
     bottom: 0;
-	
+
 }
 
 .course-overlay:hover {
@@ -5274,7 +5274,7 @@ i.icon1 {
 	background: #c8302f !important;
 	border: 1px solid #c8302f !important;
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.07);
-}	
+}
 
 .courses_performance .owl-nav .owl-next:hover {
 	color: #fff !important;
@@ -5383,7 +5383,7 @@ i.icon1 {
 	background: #c8302f !important;
 	border: 1px solid #c8302f !important;
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.07);
-}	
+}
 
 .edututs_news .owl-nav .owl-next:hover {
 	color: #fff !important;
@@ -5401,7 +5401,7 @@ i.icon1 {
     color: #686f7a;
     text-align: left;
 	margin-bottom: 0;
-    margin-top: 15px;	
+    margin-top: 15px;
 }
 
 .crsedt8145 {
@@ -5505,7 +5505,7 @@ i.icon1 {
     margin-bottom: 0;
 }
 
-.submit-course span {  
+.submit-course span {
     margin-left: 10px;
 }
 
@@ -5978,7 +5978,7 @@ table {
 	font-family: 'Roboto', 'helvetica',sans-serif;
     font-weight: 400;
 	color: #686f7a;
-	padding-top: 30px;	
+	padding-top: 30px;
 	border-radius: 0 !important;
 	margin-left: -1px;
 }
@@ -6203,7 +6203,7 @@ table {
 #add-course-tab > .step-content .step-tab-gallery .custom-file {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	border: 0;	
+	border: 0;
 	padding: 0;
 	font-family: 'Roboto', 'helvetica',sans-serif;
 	color: #333;
@@ -6499,7 +6499,7 @@ textarea ~ .badge_num2 {
 .part_input .custom-file {
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-	border: 0;	
+	border: 0;
 	padding: 0;
 	font-family: 'Roboto', 'helvetica',sans-serif;
 	color: #333;
@@ -7279,7 +7279,7 @@ i.icon8 {
 }
 
 ._rate003 {
-	
+
 }
 
 ._rate004 {
