--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2638,7 +2638,7 @@ direction: rtl;
 }
 
 .rtl ._215b01 {
-	float: left;
+	/* float: left; */
 	width: 100%;
 	background: #333333;
 	padding: 30px 0;
@@ -10601,7 +10601,7 @@ i.icon2 {
 }
 
 ._215b01 {
-	float: left;
+	/* float: left; */
 	width: 100%;
 	background: #333333;
 	padding: 30px 0;
@@ -10613,6 +10613,10 @@ i.icon2 {
     float: left;
     width: 100%;
     border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 ._215b02 {
@@ -16099,10 +16103,10 @@ select {
     transition: width .1s ease,-webkit-box-shadow .1s ease;
     transition: box-shadow .1s ease,width .1s ease;
     transition: box-shadow .1s ease,width .1s ease,-webkit-box-shadow .1s ease;
-    -webkit-border-radius: .28571429rem;
-    -moz-border-radius: .28571429rem;
-    -ms-border-radius: .28571429rem;
-    -o-border-radius: .28571429rem;
+    -webkit-border-radius: 500rem !important;
+    -moz-border-radius: 500rem !important;
+    -ms-border-radius: 500rem !important;
+    -o-border-radius: 500rem !important;
     -moz-transform: rotateZ(0);
     -ms-transform: rotateZ(0);
     -o-transform: rotateZ(0);
@@ -16127,12 +16131,15 @@ select:invalid { color: #e5e5e5; }
 #notification-dropdown:hover .menu,#notification-dropdown:focus-within .menu,
 #message-dropdown:hover .menu, #message-dropdown:focus-within .menu,
 #account-dropdown:hover .menu ,#account-dropdown:focus-within .menu ,
-#language:hover .menu, #language:focus-within .menu{
+#language:hover .menu, #language:focus-within .menu ,#language:focus .menu, #language:visited .menu{
 	display:block;
 }
 
 .toggle-menu{
 	display:block !important;
+}
+.open-menu{
+  display: block !important;
 }
 
 .rtl .uil-angle-right.collapse_menu--icon {
@@ -16436,6 +16443,7 @@ div.contact1256.contectUs{
 ._byt1458._215b15 div.row{
   display: block ruby;
 }
+
 .btn_adcart {
   height: 33px !important;
 }
@@ -16496,7 +16504,7 @@ margin: 0px 0px 0px 10px;
 
 
   .menu--item__has_sub_menu .menu--link::after {
-   
+
     right: 50px;}
 }
 
