--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -5,7 +5,7 @@
     <i class="uil uil-bars collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </label> -->
-<header class="db-header clearfix">
+<header class="db-header  clearfix">
     <button (click)="collapse()" id="collapse_menu" class=" collapse_menu">
         <i class="uil uil-bars collapse_menu--icon "></i>
         <span class="collapse_menu--label"></span>
@@ -103,18 +103,18 @@
                 </div>
             </li> -->
 
-            <li id="language" class="ui" (click)="openMenu()">
+            <li id="language" class="ui" >
                 <a  class="option_links"><i class="uil uil-globe"></i></a>
-                <div class="menu drop-menu " *ngIf="!ishideen" [ngClass]="{'open-menu': displayBlock}" >
-                    <a (click)="changeLang('en')"   class="item channel_item">{{"English" | translate}}</a>
-                    <a (click)="changeLang('ar')"   class="item channel_item">{{"Arabic" | translate}}</a>
+                <div class="menu drop-menu">
+                    <a (click)="changeLang('en')" class="item channel_item">{{"English" | translate}}</a>
+                    <a (click)="changeLang('ar')" class="item channel_item">{{"Arabic" | translate}}</a>
                 </div>
             </li>
-            <li id="account-dropdown" class="ui" (click)="openLogoutDiv()">
+            <li id="account-dropdown" class="ui">
                 <a  class="opts_account">
                     <img src="assets/images/hd_dp.jpg" alt="">
                 </a>
-                <div class="menu drop-menu" [ngClass]="{'open-menu': displayLogOtDiv}">
+                <div class="menu drop-menu">
                     <div class="channel_my">
                         <div class="profile_link">
                             <!-- <img src="assets/images/hd_dp.jpg" alt=""> -->
@@ -148,24 +148,24 @@
 </header>
 <!-- Header End -->
 <!-- Left Sidebar Start -->
-<nav class=" vertical_nav vertical_nav__minify">
+<nav id="mySidebar" class=" vertical_nav vertical_nav__minify">
   <div class="left_section menu_left" id="js-menu">
       <div class="  left_section">
           <ul>
-              <li class="menu--item">
-                  <a [routerLink]="['dashboard']" routerLinkActive="active"  class="menu--link" title="Dashboard">
+              <li class="menu--item" (click)="close()">
+                  <a [routerLink]="['dashboard']" routerLinkActive="active" data-toggle="collapse" class="menu--link" title="Dashboard">
                       <i class='uil uil-home-alt menu--icon'></i>
                       <span class="menu--label">{{"Dashboard" | translate}}</span>
                   </a>
               </li>
-              <li class="menu--item">
-                  <a [routerLink]="['courses']" routerLinkActive="active"  class="menu--link" title="Dashboard">
+              <li class="menu--item" (click)="close()">
+                  <a [routerLink]="['courses']" routerLinkActive="active" data-toggle="collapse"  class="menu--link" title="Dashboard">
                       <i class="uil uil-book-alt menu--icon"></i>
                       <span class="menu--label">{{"All Courses" | translate}}</span>
                   </a>
               </li>
-              <li class="menu--item">
-                  <a [routerLink]="['myCourses']" routerLinkActive="active"  class="menu--link" title="My Courses">
+              <li class="menu--item" (click)="close()">
+                  <a [routerLink]="['myCourses']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="My Courses">
                       <i class="uil uil-heart-alt menu--icon"></i>
                       <span class="menu--label">{{"My Courses" | translate}}</span>
                   </a>
@@ -309,6 +309,7 @@
           </div>
       </div> -->
   </div>
+</nav>
 <nav class="vertical_nav vertical_nav__minify">
     <div class="left_section menu_left" id="js-menu">
         <div class="left_section">
