--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,6 @@ h4 {
     left: 1rem;
     // background-color: red;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
